--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <nav>
         <ul>
-            <li><a href="pages/profile.html">Profile</a></li>
-            <li><a href="pages/work_experience.html">Work Experience</a></li>
-            <li><a href="pages/university_projects.html">University Projects</a></li>
+            <li><a href="Pages/profile.html">Profile</a></li>
+            <li><a href="Pages/work_experience.html">Work Experience</a></li>
+            <li><a href="Pages/university_projects.html">University Projects</a></li>
         </ul>
     </nav>
 
