--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 <head>
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="Header.js"></script>
 </head>
 <body>
-    <header>
-        <h1>About Me</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="Pages/profile.html">Profile</a></li>
-            <li><a href="Pages/work_experience.html">Work Experience</a></li>
-            <li><a href="Pages/University_projects.html">University Projects</a></li>
-        </ul>
-    </nav>
-
     <main>
-     
+        <section class="links">
+            <a href="Pages/profile.html">Profile</a>
+            <a href="Pages/work_experience.html">Work Experience</a>
+            <a href="Pages/University_projects.html">University Projects</a>
+        </section>
     </main>
+    
     <footer>
         <p>&copy; 2023 Matthew David</p>
     </footer>
