--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Combined Portfolio with p5.js Sketch</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="Header.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <!-- Additional styles or scripts can be added here -->
 </head>
+
 <body>
+    <script src="Header.js"></script>
+
     <main>
         <section class="links">
             <a href="Pages/profile.html">Profile</a>
@@ -14,12 +18,10 @@
             <a href="Pages/University_projects.html">University Projects</a>
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2023 Matthew David</p>
     </footer>
 </body>
-</html>
 
-			
-              
+</html>
