--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Combined Portfolio with p5.js Sketch</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <!-- Additional styles or scripts can be added here -->
-</head>
-
-<body>
     <script src="Header.js"></script>
-
+</head>
+<body>
     <main>
         <section class="links">
             <a href="Pages/profile.html">Profile</a>
@@ -18,10 +14,9 @@
             <a href="Pages/University_projects.html">University Projects</a>
         </section>
     </main>
-
+    
     <footer>
         <p>&copy; 2023 Matthew David</p>
     </footer>
 </body>
-
 </html>
