--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html>
 <head>
     <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="Header.js"></script>
 </head>
 <body>
+    <header>
+        <h1>My Portfolio</h1>
+        <nav>
+            <a href="profile.html">Profile</a>
+            <a href="work_experience.html">Work Experience</a>
+            <a href="university_projects.html">University Projects</a>
+        </nav>
+    </header>
+    
     <main>
-        <section class="links">
-            <a href="Pages/profile.html">Profile</a>
-            <a href="Pages/work_experience.html">Work Experience</a>
-            <a href="Pages/University_projects.html">University Projects</a>
-        </section>
+        <!-- Your main content goes here -->
     </main>
     
     <footer>
