--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="Header.js"></script>
+    <script src="sketch.js"></script> <!-- Changed from Header.js to sketch.js -->
 </head>
 <body>
     <header>
