--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="sketch.js"></script> <!-- Changed from Header.js to sketch.js -->
-</head>
+    <script src="sketch.js"></script>
 <body>
     <header>
         <h1>My Portfolio</h1>
         <nav>
-            <a href="profile.html">Profile</a>
-            <a href="work_experience.html">Work Experience</a>
-            <a href="university_projects.html">University Projects</a>
+            <a href="Pages/profile.html">Profile</a>
+            <a href="Pages/work_experience.html">Work Experience</a>
+            <a href="Pages/University_projects.html">University Projects</a>
         </nav>
     </header>
     
