--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="sketch.js"></script>
+</head>
 <body>
-    <header>
-        <h1>My Portfolio</h1>
-        <nav>
+    <main>
+        <!-- Your buttons go here -->
+        <section class="links">
             <a href="Pages/profile.html">Profile</a>
             <a href="Pages/work_experience.html">Work Experience</a>
             <a href="Pages/University_projects.html">University Projects</a>
-        </nav>
-    </header>
-    
-    <main>
-        <!-- Your main content goes here -->
+        </section>
     </main>
     
     <footer>
