--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="sketch.js"></script>
+</head>
 <body>
-    <header>
-        <h1>My Portfolio</h1>
+    <main>
         <nav>
             <a href="Pages/profile.html">Profile</a>
             <a href="Pages/work_experience.html">Work Experience</a>
             <a href="Pages/University_projects.html">University Projects</a>
         </nav>
-    </header>
-    
-    <main>
-        <!-- Your main content goes here -->
     </main>
     
     <footer>
@@ -24,3 +19,4 @@
     </footer>
 </body>
 </html>
+
