--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="sketch.js"></script>
 </head>
 <body>
+    <header>
+        <h1>My Portfolio</h1>
+    </header>
+
     <main>
         <nav>
             <a href="Pages/profile.html">Profile</a>
@@ -17,6 +19,8 @@
     <footer>
         <p>&copy; 2023 Matthew David</p>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="sketch.js"></script>
 </body>
 </html>
-
